globus-xio (5.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix hang in tests on cygwin

 -- Globus Toolkit <support@globus.org>  Mon, 22 Dec 2014 13:12:09 -0500

globus-xio (5.0-1+gt6.@distro@) @distro@; urgency=low

  * Add net_manager support

 -- Globus Toolkit <support@globus.org>  Thu, 18 Dec 2014 07:50:23 -0500

globus-xio (4.17-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:11:37 -0500

globus-xio (4.16-1+gt6.@distro@) @distro@; urgency=low

  * Use localhost for tests

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 10:00:45 -0500

globus-xio (4.15-2+gt6.@distro@) @distro@; urgency=low

  * Add build dependency on libltdl-dev for tests

 -- Globus Toolkit <support@globus.org>  Thu, 23 Oct 2014 13:04:07 -0400

globus-xio (4.15-1+gt6.@distro@) @distro@; urgency=low

  * Use consistent PREDEFINED in all Doxyfiles
  * Doxygen markup fixes
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 15:08:08 -0400

globus-xio (4.14-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-xio (4.13-2+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-xio (4.13-1+gt6.@distro@) @distro@; urgency=low

  * Fix regression caused by GT-546 fix

 -- Globus Toolkit <support@globus.org>  Mon, 11 Aug 2014 20:14:43 -0400

globus-xio (4.12-1+gt6.@distro@) @distro@; urgency=low
   
  * GT-546: HTTP transfers larger than 4GB fail

 -- Globus Toolkit <support@globus.org>  Thu, 07 Aug 2014 12:12:13 -0500

globus-xio (4.11-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-xio (4.11-1+gt6.@distro@) @distro@; urgency=low
